--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "videojs-hls-quality-selector",
+  "name": "@nodge/videojs-hls-quality-selector",
   "version": "1.1.4",
   "description": "Adds a quality selector menu for HLS sources played in videojs.  Requires `videojs-contrib-hls` and videojs-contrib-quality-levels plugins.",
   "main": "dist/videojs-hls-quality-selector.cjs.js",
